--- a/frontend/src/app/store/store.component.html
+++ b/frontend/src/app/store/store.component.html
@@ -9,19 +9,24 @@
   
   <!-- Current Store JobOffers -->
   <div class="col-xs-12">
-    <div *ngIf="jobOffers.length > 0; else no_offers;">
-      <div class="job-offer" *ngFor="let jobOffer of jobOffers">
-        <h4>{{jobOffer.title}}</h4>
-        <span class="help-block">
-          {{jobOffer.created_at | date:'yyyy-MM-dd'}}
-          <br>
-          {{jobOffer.created_at | date:'HH:mm'}}</span>
-        <p>{{jobOffer.description}}</p>
-        <a class="btn btn-primary btn-sm" routerLink="/store/joboffers/{{jobOffer.id}}">List applicants</a>
+    <div *ngIf="jobOffers; else no_connection;">
+      <div *ngIf="jobOffers.length > 0; else no_offers;">
+        <div class="job-offer" *ngFor="let jobOffer of jobOffers">
+          <h4>{{jobOffer.title}}</h4>
+          <span class="help-block">
+            {{jobOffer.created_at | date:'yyyy-MM-dd'}}
+            <br>
+            {{jobOffer.created_at | date:'HH:mm'}}</span>
+          <p>{{jobOffer.description}}</p>
+          <a class="btn btn-primary btn-sm" routerLink="/store/joboffers/{{jobOffer.id}}">List applicants</a>
+        </div>
       </div>
+      <ng-template #no_offers>
+        <h4 class="text-center text-warning">You haven't created any JobOffer yet</h4>
+      </ng-template>
     </div>
-    <ng-template #no_offers>
-      <h4 class="text-center text-warning">You haven't created any JobOffer yet</h4>
+    <ng-template #no_connection>
+      <h4 class="text-center text-warning">Loading your job offers...</h4>
     </ng-template>
   </div>
 </div>
